hphp/test/slow/parser/unset_class_constant_read.php.expectf
 Fatal error: Can't use [] for reading in %s/unset_class_constant_read.php on line 10
